src/test/resources/semantic/declarations/error/TC_ERROR_DOBLE_STRUCT.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 5 | COLUMNA 8 | La estructura 'A' se ha definido más de una vez. |

struct A{

}

struct A{

}

start{

}